docker/prod/cloud/kind-example/depl.yml
apiVersion: v1
kind: Namespace
metadata:
  name: seb-server-prod
---
apiVersion: v1
kind: Service
metadata:
  name: seb-guiservice-prod
  namespace: seb-server-prod
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: seb-server-gui
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: seb-webservice-prod
  namespace: seb-server-prod
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: seb-webservice
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: seb-guiservice
  name: seb-guiservice-prod
  namespace: seb-server-prod
spec:
  minReadySeconds: 10
  replicas: 3
  selector:
    matchLabels:
      app: seb-guiservice
  template:
    metadata:
      labels:
        app: seb-guiservice
    spec:
      containers:
      - env:
        - name: JAVA_HEAP_MIN
          value: 1G
        - name: JAVA_HEAP_MAX
          value: 8G
        - name: MONITORING_MODE
          value: "false"
        - name: JMX_PORT
          value: "9090"
        - name: spring_profils_active
          value: gui,prod-gui,prod
        - name: sebserver_gui_http_external_scheme
          value: http
        - name: sebserver_gui_http_external_servername
          value: seb-guiservice
        - name: sebserver_gui_http_external_port
          value: ""
        - name: sebserver_gui_http_webservice_scheme
          value: http
        - name: sebserver_gui_http_webservice_servername
          value: seb-webservice
        - name: sebserver_gui_http_webservice_port
          value: ""
        - name: sebserverpassword
          valueFrom:
            secretKeyRef:
              key: SEBSERVER_PWD
              name: sebservercredentials
        image: anhefti/seb-server:v2.0-stable
        name: seb-guiservice
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /sebserver/config/spring
          name: application-properties
          readOnly: true
        - mountPath: /sebserver/config/spring
          name: logback-xml
          readOnly: true
        - mountPath: /sebserver/config/jmx
          name: jmx-remote-access
      volumes:
      - configMap:
          items:
          - key: application-prod.properties
            path: application-prod.properties
          name: application-guiservice-prod-properties-prod-69cc55g4cg
        name: application-properties
      - configMap:
          items:
          - key: logback.xml
            path: logback.xml
          name: logback-guiservice-prod-xml-prod-5ch6g2444m
        name: logback-xml
      - configMap:
          items:
          - key: jmxremote.access
            path: jmxremote.access
          name: guiservice-jmx-remote-access-prod-9ch7t9dkkb
        name: jmx-remote-access
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: seb-webservice
  name: seb-webservice-prod
  namespace: seb-server-prod
spec:
  minReadySeconds: 10
  replicas: 1
  selector:
    matchLabels:
      app: seb-webservice
  template:
    metadata:
      labels:
        app: seb-webservice
    spec:
      containers:
      - env:
        - name: sebserverpassword
          valueFrom:
            secretKeyRef:
              key: SEBSERVER_PWD
              name: app-env-prod
        - name: DB_HOST
          value: seb-db
        - name: DB_USER
          valueFrom:
            secretKeyRef:
              key: DB_USER
              name: db-env-prod
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: DB_PASSWORD
              name: db-env-prod
        - name: JAVA_HEAP_MIN
          value: 1G
        - name: JAVA_HEAP_MAX
          value: 8G
        - name: MONITORING_MODE
          value: "false"
        - name: JMX_PORT
          value: "9090"
        - name: spring_profils_active
          value: ws,prod-ws,prod
        - name: datastore_mariadb_server_address
          value: seb-server-mariadb
        - name: datastore_mariadb_server_port
          value: "3306"
        - name: spring_datasource_username
          value: root
        - name: sebservermariadbpassword
          valueFrom:
            secretKeyRef:
              key: DB_SA_PWD
              name: sebservermariadbpassword
        - name: sebserver_webservice_http_external_scheme
          value: http
        - name: sebserver_webservice_http_external_servername
          value: seb-webservice
        - name: sebserver_webservice_http_external_port
          value: ""
        image: anhefti/seb-server:v2.0-stable
        name: seb-webservice
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /sebserver/config/spring
          name: logback-xml
        - mountPath: /sebserver/config/jmx
          name: jmx-remote-access
      volumes:
      - configMap:
          items:
          - key: application-prod.properties
            path: application-prod.properties
          name: application-webservice-prod-properties-prod-4th8tfd7kb
        name: application-properties
      - configMap:
          items:
          - key: logback.xml
            path: logback.xml
          name: logback-webservice-prod-xml-prod-fgkmbccgt7
        name: logback-xml
      - configMap:
          items:
          - key: jmxremote.access
            path: jmxremote.access
          name: webservice-jmx-remote-access-prod-9ch7t9dkkb
        name: jmx-remote-access
